syntax = "proto3";

package car_items;

service CartItemService {
  rpc Create (AddCartItemRequest) returns (CartItemResponse);
  rpc GetAll (GetCartItemRequest) returns (CartItemResponse);
  rpc GetById (GetCartItemByIdRequest) returns (CartItemResponse);
  rpc Update (UpdateCartItemRequest) returns (CartItemResponse);
  rpc Delete (DeleteCartItemRequest) returns (DeleteCartItemResponse);
}

message CartItemResponse {
  int32 id = 1;
  int32 quantity = 2;
  int32 cartId = 3;
  int32 productId = 4;
}

message AddCartItemRequest {
  int32 cartId = 1;
  int32 productId = 2;
  int32 quantity = 3;
}

message GetCartItemRequest {
  int32 id = 1;
}

message GetCartItemByIdRequest {
  int32 id = 1;
}

message UpdateCartItemRequest {
  int32 id = 1;
  int32 quantity = 2;
}

message DeleteCartItemRequest {
  int32 id = 1;
}

message DeleteCartItemResponse {
  bool success = 1;
}
