syntax = "proto3";

package product;

service ProductService {
  rpc Create (CreateProductRequest) returns (ProductResponse);
  rpc GetById (FindOneProductRequest) returns (ProductResponse);
  rpc GetAll (FindAllProductsRequest) returns (FindAllProductsResponse);
  rpc Update (UpdateProductRequest) returns (ProductResponse);
  rpc Delete (DeleteProductRequest) returns (DeleteProductResponse);
}

message ProductResponse {
  int32 id = 1;
  string name = 2;
  float price = 3;
  int32 stock = 4;
  string description = 5;
  int32 categoryId = 6;
}

message CreateProductRequest {
  string name = 1;
  float price = 2;
  int32 stock = 3;
  string description = 4;
  int32 categoryId = 5;
}

message FindOneProductRequest {
  int32 id = 1;
}

message FindAllProductsRequest {}

message FindAllProductsResponse {
  repeated ProductResponse products = 1;
}

message UpdateProductRequest {
  int32 id = 1;
  string name = 2;
  float price = 3;
  int32 stock = 4;
  string description = 5;
  int32 categoryId = 6;
}

message DeleteProductRequest {
  int32 id = 1;
}

message DeleteProductResponse {
  bool success = 1;
}
